--- a/web/app/src/theme/_smui-theme.scss
+++ b/web/app/src/theme/_smui-theme.scss
@@ -1,13 +1,13 @@
-@use 'sass:color';
+@use "sass:color";
 
-@use '@material/theme/color-palette';
+@use "@material/theme/color-palette";
 
 // Svelte Colors!
-@use '@material/theme/index' as theme with (
-  $primary: #ff3e00,
-  $secondary: #676778,
-  $surface: #fff,
-  $background: #fff,
+@use "@material/theme/index" as theme with (
+  $primary: #01937c,
+  $secondary: #ffc074,
+  $surface: #faf1e6,
+  $background: #c9e4c5,
   $error: color-palette.$red-900
 );
 
