--- a/web/app/src/theme/_smui-theme.scss
+++ b/web/app/src/theme/_smui-theme.scss
@@ -1,9 +1,9 @@
-@use "sass:color";
+@use 'sass:color';
 
-@use "@material/theme/color-palette";
+@use '@material/theme/color-palette';
 
 // Svelte Colors!
-@use "@material/theme/index" as theme with (
+@use '@material/theme/index' as theme with (
   $primary: #19b9a1,
   $secondary: #dbda86,
   $surface: #fff,
